[bugfix] fixed error with swagger
